# opencv_video_publisher

./: .gitmodules  CMakeLists.txt  camCalibration  dependencies.sh
app/: CMakeLists.txt
app/include/: aruco_functions.h  calibrator.h  include_helper.h  parameters_list.h  paths.h  safety_checks.h  set_parameters.h
app/parameters/: topics_and_names.yaml
app/src/: aruco_functions.cpp  calibrator.cpp  main.cpp
lib/: CMakeLists.txt
lib/communication_lib/fastdds_lib/fastddsgen_generated_files/msg_definitions/: MocapPubSubTypes.h  MotorSpeed.h
lib/communication_lib/fastdds_lib/publishers/default_publisher/: default_publisher.h
lib/communication_lib/fastdds_lib/publishers/video_publisher/: video_publisher.cpp
lib/communication_lib/msgs_lib/: CMakeLists.txt
lib/communication_lib/msgs_lib/cpp_msgs/: CMakeLists.txt
lib/communication_lib/msgs_lib/cpp_msgs/basic_msgs/: CMakeLists.txt
lib/communication_lib/msgs_lib/cpp_msgs/basic_msgs/actuator_msgs/: CMakeLists.txt
lib/communication_lib/msgs_lib/cpp_msgs/basic_msgs/geometry_msgs/: CMakeLists.txt
lib/communication_lib/msgs_lib/cpp_msgs/basic_msgs/sensor_msgs/: CMakeLists.txt
lib/communication_lib/msgs_lib/cpp_msgs/robot_msgs/: CMakeLists.txt
lib/communication_lib/msgs_lib/dds_msgs/: EulerAngleZYX.idl  Header.idl  Image1080p.idl  Image720p.idl  Mocap.idl  MotorSpeed.idl  Pose.idl  Position.idl  QuadActionCmd.idl  QuadAttitudeCommand.idl  QuadAttitudeRateCommand.idl  QuadMotorCommand.idl  QuadPositionCmd.idl  QuadVelocityCmd.idl  Quaternion.idl  ThrustTorqueCommand.idl  Velocity.idl
(+19 files in other folders)
